[gd_scene format=3 uid="uid://dccm81k18vutf"]

[ext_resource type="Script" uid="uid://cow4ev4r652c1" path="res://maps/benches/bench.gd" id="1_t1sq2"]
[ext_resource type="Texture2D" uid="uid://cml20x1y0xxrg" path="res://maps/benches/Interact fleurs - atlas0 #40637 (1).png" id="2_hwsbe"]
[ext_resource type="Texture2D" uid="uid://cch4eh2viekpd" path="res://maps/benches/town_bench.png" id="3_olma8"]
[ext_resource type="Texture2D" uid="uid://06bh6atit6dp" path="res://maps/benches/town_bench_lit.png" id="4_55vlw"]
[ext_resource type="PackedScene" uid="uid://da01lfn2jh3g2" path="res://assets/particles/effects/Bench_save_particle.tscn" id="5_hwsbe"]
[ext_resource type="AudioStream" uid="uid://chygm2alnq83m" path="res://maps/benches/bench_rest.wav" id="6_olma8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_10qfj"]
atlas = ExtResource("3_olma8")
region = Rect2(0, 0, 183, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppuxp"]
atlas = ExtResource("4_55vlw")
region = Rect2(0, 0, 183, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_kx6da"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10qfj")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppuxp")
}],
"loop": false,
"name": &"lit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6gkf"]
size = Vector2(224, 153)

[node name="Bench" type="Node2D" unique_id=1729237278]
script = ExtResource("1_t1sq2")

[node name="Sprite2D2" type="Sprite2D" parent="." unique_id=1329195849]
position = Vector2(0, -99)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_hwsbe")

[node name="Sprite2D" type="AnimatedSprite2D" parent="." unique_id=759233332]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_kx6da")

[node name="Area2D" type="Area2D" parent="." unique_id=994477094]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=442978974]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_y6gkf")
debug_color = Color(0.43137255, 0.47843137, 0.23529412, 0.41960785)

[node name="Bench_save" parent="." unique_id=60370041 instance=ExtResource("5_hwsbe")]
amount = 30
script = null

[node name="BenchRest" type="AudioStreamPlayer" parent="." unique_id=1046570613]
stream = ExtResource("6_olma8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
